small fix for firstLast gap

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -160,6 +160,7 @@ textarea:focus {
   .firstLast {
     flex-direction: column;
     align-items: center;
+    gap: 1rem;
   }
   .contactMain {
     padding: 10px;
